--- a/src/DigitalParadox.HandlebarsCli.Plugins/DigitalParadox.HandlebarsCli.Plugins.csproj
+++ b/src/DigitalParadox.HandlebarsCli.Plugins/DigitalParadox.HandlebarsCli.Plugins.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitalParadox.HandlebarsCli.Plugins</RootNamespace>
     <AssemblyName>DigitalParadox.HandlebarsCli.Plugins</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -31,7 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Handlebars, Version=1.8.1.0, Culture=neutral, PublicKeyToken=22225d0bf33cd661, processorArchitecture=MSIL">
-      <HintPath>..\packages\Handlebars.Net.1.9.0\lib\net40\Handlebars.dll</HintPath>
+      <HintPath>..\..\packages\Handlebars.Net.1.9.0\lib\net40\Handlebars.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -44,9 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AssemblyLoader.cs" />
+    <Compile Include="HelloWorldExamplePlugin.cs" />
+    <Compile Include="IHandlebarsHelper.cs" />
     <Compile Include="IHandlebarsPlugin.cs" />
+    <Compile Include="IProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProviderInfoAttribute.cs" />
+    <Compile Include="PluginInfoAttribute.cs" />
+    <Compile Include="PluginsLoader.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
