--- a/src/DigitalParadox.HandlebarsCli/packages.config
+++ b/src/DigitalParadox.HandlebarsCli/packages.config
@@ -8,5 +8,6 @@
   <package id="Handlebars.Net" version="1.9.0" targetFramework="net452" />
   <package id="Mustache" version="1.0.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
+  <package id="System.ValueTuple" version="4.3.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
