--- a/src/DigitalParadox.HandlebarsCli/DigitalParadox.HandlebarsCli.csproj
+++ b/src/DigitalParadox.HandlebarsCli/DigitalParadox.HandlebarsCli.csproj
@@ -76,10 +76,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Application.cs" />
     <Compile Include="Bootstrapper.cs" />
     <Compile Include="Utilities\VerbResolver\IVerbDefinition.cs" />
     <Compile Include="Utilities\VerbResolver\IVerbResolver.cs" />
+    <Compile Include="Verbs\Settings.cs" />
     <Compile Include="Verbs\Process.cs" />
     <None Include="test_data.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -95,7 +95,6 @@
     <Compile Include="Utilities\VerbResolver\VerbResolver.cs" />
     <Compile Include="Utilities\ConfigurationTools.cs" />
     <Compile Include="Utilities\HelperExtensions.cs" />
-    <Compile Include="Models\Options.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
