--- a/src/DigitalParadox.HandlebarsCli/packages.config
+++ b/src/DigitalParadox.HandlebarsCli/packages.config
@@ -7,6 +7,6 @@
   <package id="Freude" version="1.0.0.0" targetFramework="net452" />
   <package id="Handlebars.Net" version="1.9.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
-  <package id="System.ValueTuple" version="4.3.1" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.4.0-preview2-25405-01" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net452" />
 </packages>
