--- a/DigitalParadox.HandlebarsCli.Services.HandlebarsTemplateProcessor/DigitalParadox.HandlebarsCli.Services.HandlebarsTemplateProcessor.csproj
+++ b/DigitalParadox.HandlebarsCli.Services.HandlebarsTemplateProcessor/DigitalParadox.HandlebarsCli.Services.HandlebarsTemplateProcessor.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitalParadox.HandlebarsCli.Services.HandlebarsTemplateProcessor</RootNamespace>
     <AssemblyName>DigitalParadox.HandlebarsCli.Services.HandlebarsTemplateProcessor</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
