--- a/src/DogitalParadox.HandlebarsCli.Interfaces/DigitalParadox.HandlebarsCli.Interfaces.csproj
+++ b/src/DogitalParadox.HandlebarsCli.Interfaces/DigitalParadox.HandlebarsCli.Interfaces.csproj
@@ -9,8 +9,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DigitalParadox.HandlebarsCli.Interfaces</RootNamespace>
     <AssemblyName>DigitalParadox.HandlebarsCli.Interfaces</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
