--- a/src/DigitalParadox.HandlebarsCli/config.json
+++ b/src/DigitalParadox.HandlebarsCli/config.json
@@ -1,5 +1,12 @@
 ﻿{
   "PluginDirectories": [
     ".\\Plugins\\"
-  ]
+  ],
+  "ProcessorOptions" : {
+    "BaseDirectory" :  ".\\",
+    "ViewOptions": {
+      "Directory": "{{BaseDirectory}}\\Views"
+    }
+     
+    }
 }
