--- a/src/DogitalParadox.HandlebarsCli.Interfaces/DigitalParadox.HandlebarsCli.Interfaces.csproj
+++ b/src/DogitalParadox.HandlebarsCli.Interfaces/DigitalParadox.HandlebarsCli.Interfaces.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -41,10 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ITemplateProcessorOptions.cs" />
     <Compile Include="ITemplateProcessor.cs" />
     <Compile Include="ITemplateResult.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StringToDirectoryInfoConverter.cs" />
     <Compile Include="TemplateError.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
