--- a/DigitalParadox.Logging.Serilog/DigitalParadox.Logging.Serilogger.csproj
+++ b/DigitalParadox.Logging.Serilog/DigitalParadox.Logging.Serilogger.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{E393BFD5-F3A9-49FA-B229-0D4D214F3469}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DigitalParadox.Logging.Serilog</RootNamespace>
-    <AssemblyName>DigitalParadox.Logging.Serilog</AssemblyName>
+    <RootNamespace>DigitalParadox.Logging.Serilogger</RootNamespace>
+    <AssemblyName>DigitalParadox.Logging.Serilogger</AssemblyName>
     <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -54,14 +54,10 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogTemplate.cs" />
     <Compile Include="SerilogPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerilogLogger.cs" />
