--- a/DigitalParadox.Parsing.CommandLine/DigitalParadox.Parsing.CommandLineParser.csproj
+++ b/DigitalParadox.Parsing.CommandLine/DigitalParadox.Parsing.CommandLineParser.csproj
@@ -70,17 +70,13 @@
     <Reference Include="System.Runtime.Extensions, Version=4.1.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Runtime.Extensions.4.1.0-rc2-24027\lib\net462\System.Runtime.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommandLineParser.cs" />
     <Compile Include="CommandLineParserPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UnityObjectFactory.cs" />
     <Compile Include="VerbResolver.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -91,10 +87,6 @@
     <ProjectReference Include="..\DigitalParadox.Utilities.AssemblyLoader\DigitalParadox.Utilities.AssemblyLoader.csproj">
       <Project>{E857A0B0-5082-4483-A975-289C5699F352}</Project>
       <Name>DigitalParadox.Utilities.AssemblyLoader</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\src\DigitalParadox.HandlebarsCli.Plugins\DigitalParadox.HandlebarsCli.Plugins.csproj">
-      <Project>{14903b7e-0817-4fcf-9f98-a69425d95a35}</Project>
-      <Name>DigitalParadox.HandlebarsCli.Plugins</Name>
     </ProjectReference>
     <ProjectReference Include="..\src\DogitalParadox.HandlebarsCli.Interfaces\DigitalParadox.HandlebarsCli.Interfaces.csproj">
       <Project>{10b69e1f-dc8a-4a11-bbb9-85fe97c22d8d}</Project>
