--- a/src/DigitalParadox.HandlebarsCli.Plugins/DigitalParadox.HandlebarsCli.Plugins.csproj
+++ b/src/DigitalParadox.HandlebarsCli.Plugins/DigitalParadox.HandlebarsCli.Plugins.csproj
@@ -36,11 +36,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -48,7 +44,6 @@
     <Compile Include="Helpers\HelloWorldExamplePlugin.cs" />
     <Compile Include="IHandlebarsHelper.cs" />
     <Compile Include="Helpers\HelperType.cs" />
-    <Compile Include="IProvider.cs" />
     <Compile Include="Helpers\PluginInfoAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PluginsLoader.cs" />
@@ -63,6 +58,10 @@
     <ProjectReference Include="..\..\DigitalParadox.Utilities.AssemblyLoader\DigitalParadox.Utilities.AssemblyLoader.csproj">
       <Project>{E857A0B0-5082-4483-A975-289C5699F352}</Project>
       <Name>DigitalParadox.Utilities.AssemblyLoader</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DogitalParadox.HandlebarsCli.Interfaces\DigitalParadox.HandlebarsCli.Interfaces.csproj">
+      <Project>{10b69e1f-dc8a-4a11-bbb9-85fe97c22d8d}</Project>
+      <Name>DigitalParadox.HandlebarsCli.Interfaces</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
