--- a/src/DigitalParadox.HandlebarsCli/DigitalParadox.HandlebarsCli.csproj
+++ b/src/DigitalParadox.HandlebarsCli/DigitalParadox.HandlebarsCli.csproj
@@ -87,9 +87,6 @@
       <HintPath>..\..\packages\Costura.Fody.1.6.2\lib\dotnet\Costura.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="Freude, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Freude.1.0.0.0\lib\net40\Freude.dll</HintPath>
-    </Reference>
     <Reference Include="Handlebars, Version=1.8.1.0, Culture=neutral, PublicKeyToken=22225d0bf33cd661, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Handlebars.Net.1.9.0\lib\net40\Handlebars.dll</HintPath>
     </Reference>
@@ -169,15 +166,8 @@
     <Reference Include="System.Runtime.InteropServices, Version=4.1.1.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\..\packages\System.Runtime.InteropServices.4.3.0\lib\net463\System.Runtime.InteropServices.dll</HintPath>
     </Reference>
-    <Reference Include="System.ValueTuple, Version=4.0.2.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\System.ValueTuple.4.4.0-preview2-25405-01\lib\net461\System.ValueTuple.dll</HintPath>
-    </Reference>
-    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions" />
-    <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
@@ -227,9 +217,9 @@
       <Project>{AA472B29-96FF-47EA-9DEC-04C90406FF3A}</Project>
       <Name>DigitalParadox.HandlebarsCli.Services.HandlebarsTemplateProcessor</Name>
     </ProjectReference>
-    <ProjectReference Include="..\..\DigitalParadox.Logging.Serilog\DigitalParadox.Logging.Serilog.csproj">
+    <ProjectReference Include="..\..\DigitalParadox.Logging.Serilog\DigitalParadox.Logging.Serilogger.csproj">
       <Project>{E393BFD5-F3A9-49FA-B229-0D4D214F3469}</Project>
-      <Name>DigitalParadox.Logging.Serilog</Name>
+      <Name>DigitalParadox.Logging.Serilogger</Name>
     </ProjectReference>
     <ProjectReference Include="..\..\DigitalParadox.Parsers.Yaml\DigitalParadox.Parsers.Yaml.csproj">
       <Project>{A1FA7213-A1D9-4E43-B878-4E58F54C342F}</Project>
@@ -259,11 +249,6 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
-  </ItemGroup>
-  <ItemGroup>
-    <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.2.3.0-beta1\analyzers\dotnet\cs\Analyzer.Utilities.dll" />
-    <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.2.3.0-beta1\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
-    <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.2.3.0-beta1\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
