refactoring for nuget migration

--- a/src/HandlebarsCli.HandlebarsTemplateProcessor/HandlebarsCli.HandlebarsTemplateProcessor.csproj
+++ b/src/HandlebarsCli.HandlebarsTemplateProcessor/HandlebarsCli.HandlebarsTemplateProcessor.csproj
@@ -4,4 +4,14 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="HandlebarsDotNet" Version="0.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Unity" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HandlebarsCli.Interfaces\HandlebarsCli.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
