--- a/src/HandleBarsCli/HandleBarsCLI.csproj
+++ b/src/HandleBarsCli/HandleBarsCLI.csproj
@@ -5,4 +5,20 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.1.4-beta2" />
+    <PackageReference Include="DigitalParadox.Logging.Serilog" Version="1.0.12" />
+    <PackageReference Include="DigitalParadox.Parsers" Version="1.0.4" />
+    <PackageReference Include="DigitalParadox.Parsers.Yaml" Version="1.0.4" />
+    <PackageReference Include="HandlebarsDotNet" Version="0.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Unity" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HandlebarsCli.HandlebarsTemplateProcessor\HandlebarsCli.HandlebarsTemplateProcessor.csproj" />
+    <ProjectReference Include="..\HandlebarsCli.Plugins\HandlebarsCli.Plugins.csproj" />
+    <ProjectReference Include="..\Parsers.CommandLine\Parsers.CommandLine.csproj" />
+  </ItemGroup>
+
 </Project>
