--- a/src/HandlebarsCli.Plugins/HandlebarsCli.Plugins.csproj
+++ b/src/HandlebarsCli.Plugins/HandlebarsCli.Plugins.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="DigitalParadox.Utilities.AssemblyLoader" Version="1.0.14" />
+  </ItemGroup>
+
 </Project>
