--- a/src/Parsers.CommandLine/Parsers.CommandLine.csproj
+++ b/src/Parsers.CommandLine/Parsers.CommandLine.csproj
@@ -4,4 +4,15 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.1.4-beta2" />
+    <PackageReference Include="DigitalParadox.Parsers" Version="1.0.2" />
+    <PackageReference Include="DigitalParadox.Utilities.AssemblyLoader" Version="1.0.14" />
+    <PackageReference Include="Unity" Version="4.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\HandlebarsCli.Interfaces\HandlebarsCli.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
