--- a/src/HandlebarsCli.Plugins/HandlebarsCli.Plugins.csproj
+++ b/src/HandlebarsCli.Plugins/HandlebarsCli.Plugins.csproj
@@ -8,4 +8,8 @@
     <PackageReference Include="DigitalParadox.Utilities.AssemblyLoader" Version="1.0.14" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\HandlebarsCli.Interfaces\HandlebarsCli.Interfaces.csproj" />
+  </ItemGroup>
+
 </Project>
