--- a/src/HandleBarsCli/HandleBarsCLI.csproj
+++ b/src/HandleBarsCli/HandleBarsCLI.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HandlebarsCli.HandlebarsTemplateProcessor\HandlebarsCli.HandlebarsTemplateProcessor.csproj" />
+    <ProjectReference Include="..\HandlebarsCli.Interfaces\HandlebarsCli.Interfaces.csproj" />
     <ProjectReference Include="..\HandlebarsCli.Plugins\HandlebarsCli.Plugins.csproj" />
     <ProjectReference Include="..\Parsers.CommandLine\Parsers.CommandLine.csproj" />
   </ItemGroup>
