--- a/src/HandlebarsCli.HandlebarsTemplateProcessor/HandlebarsCli.HandlebarsTemplateProcessor.csproj
+++ b/src/HandlebarsCli.HandlebarsTemplateProcessor/HandlebarsCli.HandlebarsTemplateProcessor.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\HandlebarsCli.Interfaces\HandlebarsCli.Interfaces.csproj" />
+    <ProjectReference Include="..\HandlebarsCli.Plugins\HandlebarsCli.Plugins.csproj" />
   </ItemGroup>
 
 </Project>
