--- a/src/HandlebarsCli.HandlebarsTemplateProcessor/HandlebarsCli.HandlebarsTemplateProcessor.csproj
+++ b/src/HandlebarsCli.HandlebarsTemplateProcessor/HandlebarsCli.HandlebarsTemplateProcessor.csproj
@@ -5,14 +5,19 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="HandlebarsDotNet" Version="0.0.3" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="DigitalParadox.Parsers.Json" Version="1.0.6" />
+    <PackageReference Include="Handlebars.Net" Version="1.9.0" />
     <PackageReference Include="Unity" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\HandlebarsCli.Interfaces\HandlebarsCli.Interfaces.csproj" />
     <ProjectReference Include="..\HandlebarsCli.Plugins\HandlebarsCli.Plugins.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Reference Include="DigitalParadox.Parsers">
+      <HintPath>C:\Users\christopher.mcgrath\.nuget\packages\digitalparadox.parsers\1.0.6\lib\netstandard2.0\DigitalParadox.Parsers.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
