--- a/src/HandleBarsCli/config.yaml
+++ b/src/HandleBarsCli/config.yaml
@@ -1,4 +1,4 @@
 ﻿--- 
 PluginDirectories: 
-  - "{{AppDirectory}}\\Plugins"
-
+ verbs : "{{AppDirectory}}\\Plugins\\Verbs"
+ helpers : "{{AppDirectory}}\\Plugins\\Helpers|{{WorkingDirectory}}\\Helpers\\"
